--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,32 @@
 
-/* 
+body{
+    margin-top: 100px;
+}
+ul{
+    padding: 0;
+    margin-bottom: 0;
+}
+ul li{
+    border: 1px solid grey;
+    list-style: none;
+    padding: 3px;
+}
+h1{
+    text-align: center;
+}
+input{
+    border: none;
+    width: 100%;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+i{
+    color:rgb(221, 219, 219)
+}
 
-*/
+i:hover {
+  color: black;
+}
+
+i:active {
+  color: black;
+}
